--- a/Pagos-ejb/pom.xml
+++ b/Pagos-ejb/pom.xml
@@ -22,6 +22,17 @@
             <version>${jakartaee}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.1.0</version> <!-- Reemplaza x.y.z con la versión real que descargaste -->
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     <build>
